--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="./src/main.jsx"></script>
-    <img src="" alt="">
+    <!-- <img src="" alt=""> -->
   </body>
 </html>
+
+
 
